testsuite/lab2-testsuite/bad/fun_app_0_instead_of_1.cc
// 0 instead of 1 argument

int main() {
	let int x = foo();
	return 0 ;
}

int foo(int y) {
 return y;
}

